--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Task manager</h1>
 <p>lets organaized your day</p>
+
+<% tasks =  ['ror practice', 'controller and views', 'football match to watch', 'excersie'] %>
+<ul>
+<%tasks.each do |task|%>
+<li><%= task%></li>
+<%end%>
+</ul>
