--- a/app/views/task/index.html.erb
+++ b/app/views/task/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Task#index</h1>
-<p>Find me in app/views/task/index.html.erb</p>
+
+<ul>
+<% @tasks.each do |task|%>
+<li><%= task%></li>
+<%end%>
+</ul>
